--- a/frontend/src/app/componentes/detalle-producto/detalle-producto.component.css
+++ b/frontend/src/app/componentes/detalle-producto/detalle-producto.component.css
@@ -60,45 +60,6 @@ h1 {
     color: rgb(5, 105, 63);
 }
 
-table {
-    width: 410px;
-    border-collapse: collapse;
-    overflow: hidden;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-}
-
-th,
-td {
-    padding: 15px;
-    color: rgb(0, 0, 0);
-}
-
-th {
-    text-align: left;
-}
-
-thead th {
-    background-color: #5ba89e;
-}
-
-tbody tr:hover {
-    background-color: rgba(76, 248, 182, 0.3);
-}
-
-tbody td {
-    position: relative;
-}
-
-tbody td:hover:before {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: -9999px;
-    bottom: -9999px;
-    z-index: -1;
-}
-
 hr {
     border-color: rgb(18, 155, 121);
 }
@@ -115,6 +76,10 @@ hr {
     border: rgb(0, 97, 68) 0.5px solid;
 }
 
+.botonV {
+    margin-top: 25px;
+}
+
 .btn-compra {
     color: white;
     background-color: rgb(71, 150, 120);
@@ -125,11 +90,6 @@ hr {
     color: black;
     background-color: rgba(27, 153, 105, 0.4);
     border: rgb(0, 97, 68) 0.5px solid;
-}
-
-.contenedor:hover .imagen {
-    -webkit-transform: scale(1.5);
-    transform: scale(1.5);
 }
 
 .contenedor {
@@ -189,4 +149,68 @@ hr {
 .alert-toast .toast-header {
     color: white;
     background-color: rgb(215, 50, 50);
+}
+
+.container.gallery-container {
+    background-color: #fff;
+    color: #35373a;
+    min-height: 100vh;
+    padding: 30px 50px;
+}
+
+.gallery-container h1 {
+    text-align: center;
+    margin-top: 50px;
+    font-family: 'Droid Sans', sans-serif;
+    font-weight: bold;
+}
+
+.gallery-container p.page-description {
+    text-align: center;
+    margin: 25px auto;
+    font-size: 18px;
+    color: #999;
+}
+
+.tz-gallery {
+    padding: 40px;
+}
+
+
+/* Override bootstrap column paddings */
+
+.tz-gallery .lightbox img {
+    width: 100%;
+    border-radius: 0;
+    position: relative;
+}
+
+.tz-gallery {
+    padding: 0px;
+}
+
+.tz-gallery .lightbox:after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    content: '';
+    transition: 0.4s;
+}
+
+.tz-gallery .lightbox:hover:after,
+.tz-gallery .lightbox:hover:before {
+    opacity: 1;
+}
+
+.baguetteBox-button {
+    background-color: transparent !important;
+}
+
+@media(max-width: 768px) {
+    body {
+        padding: 0;
+    }
 }
