--- a/frontend/src/app/componentes/detalle-producto/detalle-producto.component.html
+++ b/frontend/src/app/componentes/detalle-producto/detalle-producto.component.html
@@ -20,18 +20,23 @@
     </div>
 </div>
 
+
+
 <div class=" mt-4">
 
     <div class=" container">
         <div class="row">
+            <div class=" col-4">
+                <div class=" container-fluid botonV">
+
+                    <a class='btn btn-default volver' (click)='onBack()' id="btn-volver"> <i class="fas fa-arrow-circle-left"></i></a>
+
+                </div>
+            </div>
             <div class=" col-8">
                 <h1>Detalle Producto</h1>
             </div>
-            <div class=" col-4">
-                <div class=" container mt-4 " style="text-align: right ;">
-                    <button type="button" [routerLink]="['/productos']" class="btn btn-outline-success volver" id="btn-volver"><i class="fas fa-arrow-circle-left"></i> Volver</button>
-                </div>
-            </div>
+
         </div>
 
         <hr>
@@ -39,10 +44,15 @@
 
     <div class=" container" *ngIf="!cargando">
         <div class=" row">
-            <div class=" col-lg-5 col-sm-10  galeria">
+            <div class=" col-lg-5 col-sm-12 galeria">
                 <div class=" container margen fondo">
-                    <div class="img-animtion imagenes p-0  ">
-                        <img src="{{url+'get-image/'+producto.urlportada}}" alt="" class="card-img-top imagenes  ">
+                    <div class="img-animtion imagenes p-0 tz-gallery " id="portada">
+
+
+                        <a class="lightbox" href="{{url+'get-image/'+producto.urlportada}}">
+                            <img id="portada" src="{{url+'get-image/'+producto.urlportada}}" class="card-img-top imagenes">
+                        </a>
+
                     </div>
 
                 </div>
@@ -51,13 +61,15 @@
                 <div id="carouselExampleIndicators" *ngIf="producto.galeria[0]!==null" class="carousel slide  fondo" data-interval="false" data-ride="carousel">
 
                     <div class="carousel-inner">
-                        <div class="carousel-item" *ngFor="let  galeria of producto.galeria; let i=index" [class.active]="i===1">
-                            <div class="row">
-                                <div class=" col-12 contenedor">
-                                    <img src="{{url+'get-image/'+galeria}}" alt="" class=" d-blockcard-img-top imagenes2 imagen">
-
+                        <div class="carousel-item " *ngFor="let  galeria of producto.galeria; let i=index" [class.active]="i===1">
+                            <div class="row ">
+                                <div class=" col-12 contenedor  ">
+                                    <div class="tz-gallery">
+                                        <a class="lightbox" href="{{url+'get-image/'+galeria}}">
+                                            <img src="{{url+'get-image/'+galeria}}" class="d-blockcard-img-top imagenes2 imagen">
+                                        </a>
+                                    </div>
                                 </div>
-
                             </div>
                         </div>
 
@@ -75,13 +87,11 @@
                 </div>
             </div>
 
+            <div class="col-2"></div>
 
-            <div class=" col-2 ">
 
-            </div>
-
-            <div class=" col-lg-5 col-sm-8 caracteristicas">
-                <form [formGroup]="formularioCaracteristicas" class="form" enctype="multipart/form-data" validate>
+            <div class=" col-lg-5 col-sm-12  caracteristicas ">
+                <form [formGroup]="formularioCaracteristicas" class="form " enctype="multipart/form-data" validate>
                     <div class=" container mt-4">
                         <div class="row">
                             <div class="col-4 pl-4">
@@ -150,42 +160,62 @@
                         <strong><p>Descripción:</p></strong>
                     </div>
                     <br>
-                    <div class="container">
-                        <table>
+                    <div class="container pl-4">
+                        <div class=" row">
+                            <div class=col-4>
+                                <strong><p class="color-text">Categoría: </p></strong>
+                            </div>
+                            <div class="col-8">
+                                <p>{{producto.categoria}}</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class=col-4>
+                                <strong><p  class="color-text">Tipo de Base: </p></strong>
+                            </div>
+                            <div class="col-8">
+                                <p>{{producto.tipobase}}</p>
+                            </div>
+                        </div>
 
-                            <tbody>
-                                <tr>
-                                    <strong> <td class="color-text">Categoría: </td></strong>
-                                    <td>{{producto.categoria}} </td>
-                                </tr>
-                                <tr>
-                                    <strong> <td class="color-text">Tipo de Base:</td></strong>
-                                    <td>{{producto.tipobase}} </td>
-                                </tr>
+
+                        <div class="row" *ngIf="producto.tiemposol!==''">
+                            <div class=col-4>
+                                <strong><p  class="color-text">Tiempo de Sol:</p></strong>
+                            </div>
+                            <div class="col-8">
+                                <p>{{producto.tiemposol}}</p>
+                            </div>
+                        </div>
+
+                        <div class="row" *ngIf="producto.tiemposol===''">
+                            <div class=col-4>
+                                <strong><p  class="color-text">Tiempo de Sol:</p></strong>
+                            </div>
+                            <div class="col-8">
+                                <p>-----------------</p>
+                            </div>
+                        </div>
 
 
-                                <tr *ngIf="producto.tiemposol!==''">
-                                    <strong><td class="color-text">Tiempo de Sol:</td></strong>
-                                    <td>{{producto.tiemposol}}</td>
+                        <div class="row" *ngIf="producto.frecuenciariego!==''">
+                            <div class=col-4>
+                                <strong><p  class="color-text">Frecuencia de Riego:</p></strong>
+                            </div>
+                            <div class="col-8">
+                                <p>{{producto.frecuenciariego}}</p>
+                            </div>
+                        </div>
 
-                                </tr>
-                                <tr *ngIf="producto.tiemposol===''">
-                                    <strong><td class="color-text">Tiempo de Sol:</td></strong>
-                                    <td>---------------</td>
+                        <div class="row" *ngIf="producto.frecuenciariego===''">
+                            <div class=col-4>
+                                <strong><p  class="color-text">Frecuencia de Riego:</p></strong>
+                            </div>
+                            <div class="col-8">
+                                <p>-----------------</p>
+                            </div>
+                        </div>
 
-                                </tr>
-                                <tr *ngIf="producto.frecuenciariego!==''">
-                                    <strong><td class="color-text">Frecuencia de Riego:</td></strong>
-                                    <td>{{producto.frecuenciariego}}</td>
-
-                                </tr>
-                                <tr *ngIf="producto.frecuenciariego===''">
-                                    <strong><td class="color-text">Frecuencia de Riego:</td></strong>
-                                    <td>---------------</td>
-                                </tr>
-
-                            </tbody>
-                        </table>
                     </div>
                 </form>
             </div>
