--- a/frontend/src/app/componentes/productos/productos.component.css
+++ b/frontend/src/app/componentes/productos/productos.component.css
@@ -276,3 +276,9 @@ SELECT {
     color: white;
     background-color: rgb(215, 50, 50);
 }
+
+#cards-productos:hover {
+    background-color: rgba(231, 178, 209, 0.3);
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+}
