eliminar producto del carrito
localstorage

--- a/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
+++ b/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
@@ -59,7 +59,7 @@
                                     <div class="dropdown-menu dropdown-menu-lg-right" routerLinkActive="active">
                                         <button class="dropdown-item" type="button" [routerLink]="['/perfil']">Mi Perfil</button>
                                         <button class="dropdown-item" type="button">Historial de Compras</button>
-                                        <button class="dropdown-item" type="button" (click)="authService.logoutUser()">Cerrar Sesión</button>
+                                        <button class="dropdown-item" type="button" (click)="cerrarSesion()">Cerrar Sesión</button>
                                     </div>
                                 </div>
                             </li>
