--- a/frontend/src/app/componentes/carrito/carrito.component.css
+++ b/frontend/src/app/componentes/carrito/carrito.component.css
@@ -24,3 +24,19 @@
 td {
     vertical-align: middle !important;
 }
+
+.btn-volver{
+ background-color: #f0cdd4;
+ color: brown;
+}
+
+.fa-trash-o:hover{
+    cursor: pointer;
+}
+
+.fa-trash{
+    cursor: pointer;
+    color: #ce8898;
+}
+
+
