--- a/frontend/src/app/componentes/promocion/promocion.component.html
+++ b/frontend/src/app/componentes/promocion/promocion.component.html
@@ -1,4 +1,25 @@
 <!-- <app-encabezado></app-encabezado> -->
+<div class="position-relative">
+    <div class="toast d-block added-toast animated fade-in" #toast>
+        <div class="toast-header">
+            <strong class="mr-auto">Producto agregado!</strong>
+        </div>
+        <div class="toast-body">
+            Agregó {{ (productoAgregado || productoAgregado.nombre) ? productoAgregado.nombre : 'El producto ' }} a su carrito de compras
+        </div>
+    </div>
+</div>
+
+<div class="position-relative">
+    <div class="toast d-block alert-toast animated fade-in" #alertToast>
+        <div class="toast-header">
+            <strong class="mr-auto">Producto agregado!</strong>
+        </div>
+        <div class="toast-body">
+            {{ (productoAgregado || productoAgregado.nombre) ? productoAgregado.nombre : 'El producto ' }} ya se encuentra en su carrito de compras
+        </div>
+    </div>
+</div>
 
 <app-carrusel-promo></app-carrusel-promo>
 
@@ -50,7 +71,11 @@
                                 <button type="button" class="btn btn-outline-success">Comprar Ahora</button>
                             </div>
                             <div class=" col-4">
-                                <i class="fas fa-shopping-cart icono"></i>
+                                <div class="position-relative h-100 shop-icon-bg" title="Agregar al carrito" (click)="agregarCarrito(promocion.idproducto, 1)">
+                                    <div class="position-absolute shop-icon-wrapper">
+                                        <i class="fas fa-cart-plus"></i>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
