--- a/frontend/src/app/componentes/promocion/promocion.component.css
+++ b/frontend/src/app/componentes/promocion/promocion.component.css
@@ -1,5 +1,5 @@
 .image-promo {
-    padding-left: 5%; 
+    padding-left: 5%;
     padding-right: 5%;
     padding-bottom: 25%;
     padding-top: 5%;
@@ -62,4 +62,53 @@ h3 {
 }
 
 
+/* Estilos botón carrito */
 
+.shop-icon-bg {
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+.shop-icon-bg:hover {
+    background-color: rgb(41, 151, 118);
+    border-radius: 0.25rem;
+}
+
+.shop-icon-bg:hover i {
+    color: white;
+}
+
+.shop-icon-wrapper {
+    top: 50%;
+    left: 50%;
+    transform-origin: center;
+    transform: translate(-50%, -50%);
+}
+
+
+/* Estilos toast de agregado al carrito */
+
+.added-toast,
+.alert-toast {
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    z-index: 100;
+    font-size: 1rem;
+}
+
+.added-toast .toast-header {
+    color: white;
+    background-color: rgb(41, 151, 118);
+}
+
+.alert-toast .toast-header {
+    color: white;
+    background-color: rgb(215, 50, 50);
+}
+
+#cards-productos:hover {
+    background-color: rgba(231, 178, 209, 0.3);
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+}
