--- a/frontend/src/app/componentes/productos/productos.component.html
+++ b/frontend/src/app/componentes/productos/productos.component.html
@@ -38,10 +38,10 @@
                             Precio
                         </div>
                         <div class=" col-4">
-                            <input type="text" size="1" placeholder="L." [(ngModel)]="filtro_Precio1" name="filtro_Precio" id="filtro1">
+                            <input type="text" size="1" placeholder="L" [(ngModel)]="filtro_Precio1" name="filtro_Precio" id="filtro1">
                         </div>
                         <div class=" col-4">
-                            <input type="text" size="1" placeholder="L." [(ngModel)]="filtro_Precio2" name="filtro_Precio2" id="filtro2">
+                            <input type="text" size="1" placeholder="L" [(ngModel)]="filtro_Precio2" name="filtro_Precio2" id="filtro2">
                         </div>
                     </div>
                 </div>
@@ -236,7 +236,7 @@
 
                     <ng-container *ngIf="filtrados && filtrados.length > 0">
 
-                        <div class="col-lg-4 col-md-6 col-12" *ngFor="let producto of filtrados | filtroEspecies:filtro_Especie | filtroGenero:filtro_Genero |filtroFamilia:filtro_Familia">
+                        <div class="col-lg-4 col-md-6 col-12" *ngFor="let producto of filtrados | filtroEspecies:filtro_Especie | filtroGenero:filtro_Genero |filtroFamilia:filtro_Familia | filtroPrecio: filtro_Precio1:filtro_Precio2 ">
                             <div class="card mb-5 mt-1  estilo-card">
 
                                 <div *ngIf="producto.porcentajedescuento" class="promo-percentage position-absolute">
