--- a/frontend/src/app/componentes/carrito/carrito.component.html
+++ b/frontend/src/app/componentes/carrito/carrito.component.html
@@ -62,7 +62,7 @@
             <p class="text-center w-100"><b>Total a pagar:</b> L {{totalPagar}}</p>
         </div>
         <div class="row my-3">
-            <button type="button" class="btn btn-info  m-auto">Proceder a pagar</button>
+            <button type="button" class="btn btn-info  m-auto" [routerLink]="['/informacionPago']">Proceder a pagar</button>
         </div>
     </div>
 </div>
