--- a/frontend/src/app/componentes/proceso-pago/informacion-pago/informacion-pago.component.html
+++ b/frontend/src/app/componentes/proceso-pago/informacion-pago/informacion-pago.component.html
@@ -8,7 +8,7 @@
             <div class="ml-auto mr-auto">
                 <div class="form-row mt-3">
                     <div class="w-100 mb-3">
-                        <input formControlName="nombre" type="text" class="form-control form-control-sm p-2" id="validationCustom01" placeholder="Nombre completo" required>
+                        <input formControlName="nombre" type="text" class="form-control form-control-sm p-2" id="validationCustom01" placeholder="{{usuario.nombre}}">
                     </div>
                 </div>
                 <div class="form-row">
@@ -30,7 +30,7 @@
                 <div class="form-row">
                     <div class="col-6 pl-0">
                         <div class="w-100 mb-3">
-                            <select class="custom-select custom-select-sm" formControlName="departamento" [class.is-invalid]="validation('departamento')" id="validationCustom04" required (change)="obtenerIDdepto($event.target.value)">
+                            <select class="custom-select custom-select-sm" formControlName="departamento" [class.is-invalid]="validation('departamento')" id="validationCustom04" required (change)="obtenerMunicipiosDepartamento($event.target.value)">
                                 <option selected disabled active value="">Departamento</option>
                                 <option  *ngFor="let departamento of departamentos" [value]="departamento.iddepartamento">{{departamento.descripcion}}</option>
                               </select>
@@ -55,10 +55,8 @@
                     <div class="w-100 mb-3">
                         <select class="custom-select custom-select-sm" formControlName="agencia" [class.is-invalid]="validation('agencia')" id="validationCustom06" required>
                             <option selected disabled active value="">Agencia de envío</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
-                            </select>
+                            <option value="{{agencia.idagenciaenvio}}" *ngFor="let agencia of agencias">{{agencia.nombre}}</option>
+                        </select>
                         <div class="invalid-feedback">
                             No válido
                         </div>
@@ -66,7 +64,7 @@
                 </div>
                 <div class="mt-2 mb-4 text-center">
                     <div>
-                        <button [disabled]="formularioPago.invalid" class="btn btn-info  w-50" type="button">Continuar</button>
+                        <button [disabled]="formularioPago.invalid" class="btn btn-info  w-50" type="button" (click)="registrarInformacion()">Continuar</button>
                     </div>
                 </div>
             </div>
