--- a/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
+++ b/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
@@ -58,7 +58,7 @@
                 </button>
                                     <div class="dropdown-menu dropdown-menu-lg-right" routerLinkActive="active">
                                         <button class="dropdown-item" type="button" [routerLink]="['/perfil']">Mi Perfil</button>
-                                        <button class="dropdown-item" type="button">Historial de Compras</button>
+                                        <button class="dropdown-item" type="button" [routerLink]="['/historial-compra']">Historial de Compras</button>
                                         <button class="dropdown-item" type="button" (click)="cerrarSesion()">Cerrar Sesión</button>
                                     </div>
                                 </div>
