--- a/frontend/src/app/componentes/inicio/inicio.component.html
+++ b/frontend/src/app/componentes/inicio/inicio.component.html
@@ -1,47 +1,97 @@
 <!-- <app-encabezado></app-encabezado> -->
 <app-carruzel></app-carruzel>
 
-<div class="container animated fadeIn2">
+<div class="container">
 
     <div class="row">
-        <div class="card">
-            <div>
-                <img src="assets/img/tarjeta1.jpg" class="card-img-top rounded-circle" alt="...">
+
+        <div class="card ml-1 " *ngFor="let categoria of categorias">
+            <div class="card-header">
+                <img src="{{url+'get-image/'+categoria.imagencategoria}}" class="card-img-top rounded-circle" alt="...">
+                <h2> {{categoria.descripcion}}</h2>
             </div>
-            <div class="card-body">
-                <a>Maceteras</a>
-            </div>
+
         </div>
-        <div class="card">
-            <div>
-                <img src="assets/img/tarjeta2.jpg" class="card-img-top rounded-circle" alt="...">
-            </div>
-            <div class="card-body">
-                <a>Arreglos</a>
-            </div>
-        </div>
-        <div class="card">
-            <div>
-                <img src="assets/img/tarjeta3.jpg" class="card-img-top rounded-circle" alt="...">
-            </div>
-            <div class="card-body">
-                <a>Terrarios</a>
-            </div>
-        </div>
-        <div class="card">
-            <div>
-                <img src="assets/img/tarjeta4.jpg" class="card-img-top rounded-circle" alt="...">
-            </div>
-            <div class="card-body">
-                <a>Bicicletas</a>
-            </div>
-        </div>
-        <div class="card">
-            <div>
-                <img src="assets/img/tarjeta5.jpg" class="card-img-top rounded-circle" alt="...">
-            </div>
-            <div class="card-body">
-                <a>Muñequitos</a>
-            </div>
-        </div>
+
+
+
     </div>
+</div>
+
+
+<div class=" container-fluid mt-5">
+    <div class="row">
+        <div class=" col-lg-6 col-12 pl-0 pr-0">
+            <div class="img-animtion imagenes p-0 ">
+                <img src="assets/img/a1.jpg" alt="" class="card-img-top imagenes ">
+
+            </div>
+        </div>
+
+        <div class="col-lg-6 col-12 anuncio1 ">
+            <p class="letra pt-2">Realizamos Arreglos Especiales</p>
+            <p class="letra">para cada Ocasión</p>
+            <div class=" container  pt-4">
+                <div class="row">
+
+                    <div class="col-3 alineado">
+                        <i class="fas fa-baby-carriage iconos"></i>
+                    </div>
+                    <div class="col-3 alineado">
+                        <i class="fas fa-birthday-cake iconos"></i>
+                    </div>
+                    <div class="col-3 alineado">
+                        <i class="fas fa-glass-cheers iconos"></i>
+                    </div>
+                    <div class="col-3 alineado">
+                        <i class="fas fa-gifts iconos"></i>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+</div>
+
+
+
+<div class=" container-fluid mt-5 mb-5">
+    <div class="row">
+
+
+        <div class="col-lg-6 col-12 anuncio1 ">
+            <p class="letra pt-2">Obtén tu paquete</p>
+            <p class="letra">de forma segura</p>
+            <div class=" container  pt-4">
+                <div class="row">
+
+                    <div class="col-3 alineado">
+                        <i class="fas fa-baby-carriage iconos"></i>
+                    </div>
+                    <div class="col-3 alineado">
+                        <i class="fas fa-birthday-cake iconos"></i>
+                    </div>
+                    <div class="col-3 alineado">
+                        <i class="fas fa-glass-cheers iconos"></i>
+                    </div>
+                    <div class="col-3 alineado">
+                        <i class="fas fa-gifts iconos"></i>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+
+        <div class=" col-lg-6 col-12 pl-0 pr-0 ">
+            <div class="img-animtion imagenes p-0 ">
+                <img src="assets/img/a1.jpg" alt="" class="card-img-top imagenes ">
+
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<app-piepagina></app-piepagina>
