--- a/frontend/src/app/componentes/administrador/controlador-admin/controlador-admin.component.html
+++ b/frontend/src/app/componentes/administrador/controlador-admin/controlador-admin.component.html
@@ -35,7 +35,7 @@
 
                     <span class="span">Promociones</span>
                 </a>
-                <a class="list-group-item list-group-item-action ">
+                <a [routerLink]="['./reportes']" class="list-group-item list-group-item-action ">
                     <i class="fas fa-file-invoice icono"></i>
 
                     <span class="span">Reportes</span>
