--- a/frontend/src/app/componentes/historial-compras/historial-compras.component.html
+++ b/frontend/src/app/componentes/historial-compras/historial-compras.component.html
@@ -3,36 +3,38 @@
 </div>
 
 
-
-<div>
-
+<body>
     <div>
 
-
-        <div class="table-responsive">
-            <table class="table table-hover text-center">
-                <thead>
-                    <tr>
-                        <th scope="col">Id Pedido</th>
-                        <th scope="col">Código</th>
-                        <th scope="col">Nombre de Usuario</th>
-                        <th scope="col">Correo</th>
-                        <th scope="col">Teléfono</th>
-
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let pedido of pedidos">
-                        <td>{{ pedido.idpedido }}</td>
-                        <td>{{ pedido.nombre }}</td>
-                        <td>{{ pedido.precio_unitario }}</td>
-                        <td>{{ pedido.cantidad }}</td>
-                        <td>{{ pedido.fecha | date:'d/MM/y' }}</td>
-                    </tr>
+        <div>
 
 
-                </tbody>
-            </table>
+            <div class="table-responsive">
+                <table class="table table-hover text-center">
+                    <thead class="encabezado-tabla">
+                        <tr>
+
+                            <th scope="col">Producto</th>
+                            <th scope="col">Precio</th>
+                            <th scope="col">Cantidad</th>
+                            <th scope="col">Fecha de Compra</th>
+
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let pedido of pedidos">
+
+                            <td>{{ pedido.nombre }}</td>
+                            <td>{{ pedido.precio_unitario }}</td>
+                            <td>{{ pedido.cantidad }}</td>
+                            <td>{{ pedido.fecha | date:'d/MM/y' }}</td>
+                        </tr>
+
+
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
-</div>
+
+</body>
