--- a/frontend/src/app/componentes/administrador/controlador-admin/controlador-admin.component.html
+++ b/frontend/src/app/componentes/administrador/controlador-admin/controlador-admin.component.html
@@ -35,6 +35,11 @@
 
                     <span class="span">Promociones</span>
                 </a>
+                <a [routerLink]="['./pedidos']" class="list-group-item list-group-item-action">
+                    <i class="fas fa-shipping-fast icono"></i>
+
+                    <span class="span">Pedidos</span>
+                </a>
                 <a [routerLink]="['./reportes']" class="list-group-item list-group-item-action ">
                     <i class="fas fa-file-invoice icono"></i>
 
