avances en el pago

--- a/frontend/src/app/componentes/proceso-pago/informacion-pago/informacion-pago.component.html
+++ b/frontend/src/app/componentes/proceso-pago/informacion-pago/informacion-pago.component.html
@@ -1,19 +1,25 @@
 <div class="container">
     <div class="row">
-        <h4 class="ml-3 mt-5"><b>Información de facturación <i class="fa fa-chevron-right" aria-hidden="true"></i> Paso 1</b></h4>
+        <h4 class="ml-3 mt-5"><b>Información de facturación <i class="fa fa-chevron-right" aria-hidden="true"></i> Paso
+                {{etapa}}</b></h4>
     </div>
     <hr>
     <div class="row">
-        <form class="col-lg-6 col-md-10 ml-auto mr-auto needs-validation ng-invalid ng-pristine ng-touched pl-5 pr-5 rounded text-center w-100" [formGroup]="formularioPago" validate>
+        <form (ngSubmit)="siguiente()" *ngIf="etapa == 1"
+            class="col-lg-6 col-md-10 ml-auto mr-auto needs-validation ng-invalid ng-pristine ng-touched pl-5 pr-5 rounded text-center w-100"
+            [formGroup]="formularioPago" validate>
             <div class="ml-auto mr-auto">
                 <div class="form-row mt-3">
                     <div class="w-100 mb-3">
-                        <input formControlName="nombre" type="text" class="form-control form-control-sm p-2" id="validationCustom01" placeholder="Nombre completo" required>
+                        <input formControlName="nombre" type="text" class="form-control form-control-sm p-2"
+                            id="validationCustom01" placeholder="Nombre completo" required>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="w-100 mb-3">
-                        <input formControlName="direccion" [class.is-invalid]="validation('direccion')" type="text" class="form-control form-control-sm p-2" id="validationCustom02" placeholder="Dirección" required>
+                        <input formControlName="direccion" [class.is-invalid]="validation('direccion')" type="text"
+                            class="form-control form-control-sm p-2" id="validationCustom02" placeholder="Dirección"
+                            required>
                         <div class="invalid-feedback">
                             No válido
                         </div>
@@ -21,7 +27,9 @@
                 </div>
                 <div class="form-row">
                     <div class="w-100 mb-3">
-                        <input formControlName="domicilio" [class.is-invalid]="validation('domicilio')" type="text" class="form-control form-control-sm p-2" id="validationCustom03" placeholder="Dirección de domicilio" required>
+                        <input formControlName="domicilio" [class.is-invalid]="validation('domicilio')" type="text"
+                            class="form-control form-control-sm p-2" id="validationCustom03"
+                            placeholder="Dirección de domicilio" required>
                         <div class="invalid-feedback">
                             No válido
                         </div>
@@ -30,10 +38,13 @@
                 <div class="form-row">
                     <div class="col-6 pl-0">
                         <div class="w-100 mb-3">
-                            <select class="custom-select custom-select-sm" formControlName="departamento" [class.is-invalid]="validation('departamento')" id="validationCustom04" required (change)="obtenerIDdepto($event.target.value)">
+                            <select class="custom-select custom-select-sm" formControlName="departamento"
+                                [class.is-invalid]="validation('departamento')" id="validationCustom04" required
+                                (change)="obtenerIDdepto($event.target.value)">
                                 <option selected disabled active value="">Departamento</option>
-                                <option  *ngFor="let departamento of departamentos" [value]="departamento.iddepartamento">{{departamento.descripcion}}</option>
-                              </select>
+                                <option *ngFor="let departamento of departamentos"
+                                    [value]="departamento.iddepartamento">{{departamento.descripcion}}</option>
+                            </select>
                             <div class="invalid-feedback">
                                 No válido
                             </div>
@@ -41,10 +52,12 @@
                     </div>
                     <div class="col-6 pr-0">
                         <div class="w-100 mb-3">
-                            <select class="custom-select custom-select-sm" formControlName="municipio" [class.is-invalid]="validation('municipio')" id="validationCustom05" required>
+                            <select class="custom-select custom-select-sm" formControlName="municipio"
+                                [class.is-invalid]="validation('municipio')" id="validationCustom05" required>
                                 <option selected disabled active value="">Municipio</option>
-                                <option value="{{municipio.idmunicipio}}" *ngFor="let municipio of municipios">{{municipio.descripcion_municipio}}</option>
-                              </select>
+                                <option value="{{municipio.idmunicipio}}" *ngFor="let municipio of municipios">
+                                    {{municipio.descripcion_municipio}}</option>
+                            </select>
                             <div class="invalid-feedback">
                                 No válido
                             </div>
@@ -53,12 +66,13 @@
                 </div>
                 <div class="form-row">
                     <div class="w-100 mb-3">
-                        <select class="custom-select custom-select-sm" formControlName="agencia" [class.is-invalid]="validation('agencia')" id="validationCustom06" required>
+                        <select class="custom-select custom-select-sm" formControlName="agencia"
+                            [class.is-invalid]="validation('agencia')" id="validationCustom06" required>
                             <option selected disabled active value="">Agencia de envío</option>
                             <option value="1">One</option>
                             <option value="2">Two</option>
                             <option value="3">Three</option>
-                            </select>
+                        </select>
                         <div class="invalid-feedback">
                             No válido
                         </div>
@@ -66,11 +80,25 @@
                 </div>
                 <div class="mt-2 mb-4 text-center">
                     <div>
-                        <button [disabled]="formularioPago.invalid" class="btn btn-info  w-50" type="button">Continuar</button>
+                        <button [disabled]="formularioPago.invalid" class="btn btn-info  w-50"
+                            type="submit">Continuar</button>
                     </div>
                 </div>
             </div>
         </form>
+
+        <form *ngIf="etapa == 2" novalidate (ngSubmit)="createToken()" [formGroup]="stripeTest" class="col-lg-6 col-md-10 ml-auto mr-auto">
+            <input type="text" formControlName="name" placeholder="Jane Doe">
+            <ngx-stripe-card [options]="cardOptions" [elementsOptions]="elementsOptions"></ngx-stripe-card>
+            <div class="mt-2 mb-4 text-center">
+                <div>
+                    <button type="submit" class="btn btn-info  w-50">
+                        Pagar L.{{total}}
+                    </button>
+                </div>
+            </div>
+        </form>
+
         <img src="assets/img/suculentas.jpg" class="position-fixed w-50" alt="suculentas">
     </div>
 </div>
