--- a/frontend/src/app/componentes/administrador/reportes/reportes.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/reportes.component.html
@@ -1,62 +1,66 @@
+<app-reporte-inventario></app-reporte-inventario>
 <div>
-    <h4 class="pt-2 pl-2"> <i class="fas fa-file-invoice icono pr-2"></i> REPORTES</h4>
-    <hr>
-</div>
-
-<div class="container">
-
-    <div class="row">
-
-        <div class="card ml-1 ">
-            <div class=" container texto">
-                Reporte de Ventas
-            </div>
-            <a> <img src="assets/img/ventas.png" class="card-img-top rounded-circle" alt="..."></a>
-
-        </div>
-
-        <div class="card ml-1 ">
-
-            <div class=" container texto">
-                Reporte de Ingresos
-            </div>
-            <a> <img src="assets/img/ingresos.png" class="card-img-top rounded-circle" alt="..."></a>
-
-        </div>
-
-
-
-
+    <div>
+        <h4 class="pt-2 pl-2"> <i class="fas fa-file-invoice icono pr-2"></i> REPORTES</h4>
+        <hr>
     </div>
-
-</div>
-
-<div class="container">
-
-    <div class="row">
-
-        <div class="card ml-1 ">
-
-            <div class=" container texto">
-                Reporte de Usuarios
+    
+    <div class="container">
+        <div class="row">
+    
+            <div class="card ml-1 ">
+                <div class=" container texto">
+                    Reporte de Ventas
+                </div>
+                <a> <img src="assets/img/ventas.png" class="card-img-top rounded-circle" alt="..." data-toggle="modal" data-target="#filtroVentas"></a>
+    
             </div>
-            <a [routerLink]="['./reporte-usuarios']"> <img src="assets/img/usuarios.png" class="card-img-top rounded-circle" alt="..."></a>
-
-        </div>
-
-        <div class="card ml-1 ">
-
-            <div class=" container texto">
-                Reporte de Inventario
+    
+            <div class="card ml-1 ">
+    
+                <div class=" container texto">
+                    Reporte de Ingresos
+                </div>
+                <a> <img src="assets/img/ingresos.png" class="card-img-top rounded-circle" alt="..."></a>
+    
             </div>
-
-            <a> <img src="assets/img/inventario.png" class="card-img-top rounded-circle" alt="..."></a>
-
+    
+    
+    
+    
         </div>
-
-
-
-
+    
     </div>
-
+    
+    <div class="container">
+    
+        <div class="row">
+    
+            <div class="card ml-1 ">
+    
+                <div class=" container texto">
+                    Reporte de Usuarios
+                </div>
+                <a [routerLink]="['./reporte-usuarios']"> <img src="assets/img/usuarios.png" class="card-img-top rounded-circle" alt="..."></a>
+    
+            </div>
+    
+            <div class="card ml-1 ">
+    
+                <div class=" container texto">
+                    Reporte de Inventario
+                </div>
+    
+                <a > <img src="assets/img/inventario.png" class="card-img-top rounded-circle" alt="..." data-toggle="modal" data-target="#filtroInventario"></a>
+    
+            </div>
+    
+    
+    
+    
+        </div>
+    
+    </div>
 </div>
+<app-filtro-inventario></app-filtro-inventario>
+<app-filtro-ventas></app-filtro-ventas>
